0.16.1
	new feature: allow pre-selected tags for newly added virtual services and RS pools
	new feature: cache RackCode parse tree for better performance
	bugfix: don't escape Greek letters to enable them in tag names
	bugfix: port manager messages were incorrect
	update: adjusted database for bigger texts
0.16.0 2008-07-09
	new feature: tag roller
	new feature: taggable user accounts
	new feature: RackCode configuration
	new feature: "my account" page
	update: page layout fixes and improvements
	update: dictionary updates
0.15.1 2008-06-05
	bugfix: fix auth headers in upgrade script (broken in 0.15.0)
	new feature: fetch switch serial number via SNMP (by killsystem)
	new feature: adding multiple racks
	new feature: IP address reservation release on allocation
	updates: user interface cleanups and improvements
0.15.0 2008-05-10
	new feature: tags
	new feature: automatic option groups
	new feature: rendered links in dictionary view
	new feature: trunk support in switchvlans gateway
	new feature: Tango icon set
	update: added Force10, NETGEAR, D-Link, 3Com  and Extreme Networks
		switches, Raisecom MUXes, updated Cisco routers
	update: async port type has been split
	update: don't allow duplicate rack names in one row
	update: internal help system has been dropped
	update: SSV format for RS import
	bugfix: handle "routed" switch ports
	bugfix: make switchvlans gateway work on Linux
0.14.12 2008-02-29
	new feature: default value for RS inservice status
	new feature: AutoPorts feature
	new feature: HTTP installer
	new feature: default object type
	new feature: UTF-8 support
	bugfix: router HW type list was broken
	update: added Aten KVM switches and consoles
	update: added Tainet MUXes
	update: updated HP servers
0.14.11 2008-02-15
	bugfix: rackspace allocation was broken by magic_quotes fix
	bugfix: don't generate error messages by accessing _GET array
	bugfix: thumbs cache wasn't updated in rare cases